# summarize_youtube_video

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  index.html  tone_of_voice.md
assets/: index-5Mhm56Kg.js  index-7G1NxTLh.js  index-BzU2O-tn.css  index-CBsI9ST2.js  index-CVjdpaGY.css  index-DQ_R4Jc1.css  index-DWP6prX7.css  index-y7BNALMb.js
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_main.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: png_to_webp.py  remove_background.py
worker/: package.json  wrangler.jsonc
worker/scripts/: check-transcript.mjs  deploy.mjs  dev.mjs
worker/src/: index.js  index.test.js  manual-debug.js
