[project]
name = "youtube-video-summarizer-backend"
version = "0.1.0"
description = "FastAPI backend for summarizing YouTube videos."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openai>=1.108.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "youtube-transcript-api>=1.1.0,<2.0.0",
]

[tool.uv]
package = false
